# python_django

EX-15/: mongo_to_postgres.py  pyproject.toml  settings.ini
EX-15/quotes/quotes/: settings.py  urls.py
EX-15/quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
EX-15/quotes/quotesapp/migrations/: 0001_initial.py
EX-15/quotes/quotesapp/static/quotesapp/: style.css
EX-15/quotes/quotesapp/templates/quotesapp/: author.html  base.html  detail.html  form_author.html  form_quote.html  form_tags.html  get_authors.html  get_tags.html  quotes.html  quotes_by_tag.html
EX-15/quotes/quotesapp/templatetags/: extract_tags.py
EX-15/quotes/users/: forms.py  views.py
EX-15/quotes/users/templates/users/: login.html  signup.html
